--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <ul>
-        <li><a href="https://github.com/unidagit/FrontendSchool-2-/blob/main/0405/index.html">달력</a></li>
+        <li><a href="https://unidagit.github.io/FrontendSchool-2-/0405/index.html">달력</a></li>
         <li><a href=""></a></li>
         <li><a href=""></a></li>
     </ul>
