--- a/캐릭터/tiger.html
+++ b/캐릭터/tiger.html
@@ -8,6 +8,8 @@
     <title>tiger</title>
 </head>
 <body>
+    <div class="ball">
+    </div>
     <div class="tiger">
         <div class="ear left"></div>
         <div class="ear right"></div>
@@ -32,7 +34,15 @@
         </div>
         <div class="arm right"></div>
         <div class="arm left"></div>
+        <div class="leg right"></div>
+        <div class="leg left"></div>
+        <div class="shadow"></div>
     </div>
-    
+    <div class="box"></div>
+    <div class="backball">
+        <div class="ball1"></div>
+        <div class="ball2"></div>
+        <div class="ball3"></div>
+    </div>
 </body>
 </html>
