--- a/캐릭터/tiger.html
+++ b/캐릭터/tiger.html
@@ -17,6 +17,7 @@
             <div class="eye left"></div>
             <div class="eye right"></div>
             <div class="nose"></div>
+            <div class="mouthbottom"></div>
             <div class="mouth left"></div>
             <div class="mouth right"></div>
             <div class="toppattern1"></div>
@@ -32,17 +33,17 @@
                 <div class="body_pattern"></div>
             </div>
         </div>
-        <div class="arm right"></div>
+        <div class="arm right">
+            <img class="flag" src="img/2.png" alt="깃발">
+        </div>
         <div class="arm left"></div>
+        <div class="hand left1"></div>
+        <div class="hand left2"></div>
         <div class="leg right"></div>
         <div class="leg left"></div>
         <div class="shadow"></div>
     </div>
     <div class="box"></div>
-    <div class="backball">
-        <div class="ball1"></div>
-        <div class="ball2"></div>
-        <div class="ball3"></div>
-    </div>
+    <img class="moon" src="img/1.png" alt="달">
 </body>
 </html>
