--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <ul>
         <li><a href="https://unidagit.github.io/FrontendSchool-2-/0405/index.html">달력</a></li>
-        <li><a href="https://unidagit.github.io/FrontendSchool-2-/캐릭터/tiger.html"></a></li>
+        <li><a href="https://unidagit.github.io/FrontendSchool-2-/캐릭터/tiger.html">캐릭터</a></li>
         <li><a href=""></a></li>
     </ul>
 </body>
