--- a/react/쇼핑몰만들기/final/index.html
+++ b/react/쇼핑몰만들기/final/index.html
@@ -1,61 +1,58 @@
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>위니브 스토어</title>
-    <link
-      href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <link rel="stylesheet" href="src/style/style.css" />
-  </head>
 
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>위니브 스토어</title>
+    <link href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="src/style/style.css">
+</head>
+
+<body>
     <div id="root"></div>
 
     <script>
-      const root = document.getElementById('root');
+        const root = document.getElementById('root')
 
-      async function getProductData() {
-        const response = await fetch('http://test.api.weniv.co.kr/mall');
-        const product = await response.json();
-        return product;
-      }
-      // console.log(getProductData())
-      getProductData().then((product) => {
-        // console.log(product)
-        const mainElement = document.createElement('main');
-        // console.log(mainElement)
-        mainElement.classList.add('product');
-        // console.log(mainElement)
+        async function getProductData() {
+            const response = await fetch('http://test.api.weniv.co.kr/mall')
+            const product = await response.json()
+            return product
+        }
+        // console.log(getProductData())
+        getProductData().then(product => {
+            // console.log(product)
+            const mainElement = document.createElement('main')
+            // console.log(mainElement)
+            mainElement.classList.add('product')
+            // console.log(mainElement)
 
-        // 1
-        mainElement.innerHTML = `
+            // 1
+            mainElement.innerHTML = `
                 <h1 class="ir">상품목록 페이지</h1>
                 <ul class="product-list"></ul>
-            `;
-        // console.log(mainElement)
+            `
+            // console.log(mainElement)
 
-        // 2 아래 코드로 작성하면 더 좋지만, 여러분이 html이 익숙하기 때문에 innerHTML로 작성하였습니다. 맨 아래 있는 스크립트도 참고해주세요.
-        // const prodctPageHeader = document.createElement("h1");
-        // prodctPageHeader.setAttribute("class", "ir");
-        // prodctPageHeader.innerText = "상품목록 페이지";
-        // mainElement.appendChild(prodctPageHeader);
+            // 2 아래 코드로 작성하면 더 좋지만, 여러분이 html이 익숙하기 때문에 innerHTML로 작성하였습니다. 맨 아래 있는 스크립트도 참고해주세요.
+            // const prodctPageHeader = document.createElement("h1");
+            // prodctPageHeader.setAttribute("class", "ir");
+            // prodctPageHeader.innerText = "상품목록 페이지";
+            // mainElement.appendChild(prodctPageHeader);
 
-        // const productList = document.createElement("ul");
-        // productList.setAttribute("class", "product-list");
-        // mainElement.appendChild(productList);
-        // console.log(mainElement)
+            // const productList = document.createElement("ul");
+            // productList.setAttribute("class", "product-list");
+            // mainElement.appendChild(productList);
+            // console.log(mainElement)
 
-        const productList = mainElement.querySelector('.product-list');
+            const productList = mainElement.querySelector('.product-list');
 
-        product.forEach((item) => {
-          // console.log(item)
-          const productDetailLink = document.createElement('a');
-          productDetailLink.href = `/detail/${item.id}`;
-          productDetailLink.innerHTML = `
+            product.forEach((item) => {
+                // console.log(item)
+                const productDetailLink = document.createElement('a')
+                productDetailLink.href = `/detail/${item.id}`
+                productDetailLink.innerHTML = `
                     <li class="product-item">
                         <div class="product-img">
                             <img src="http://test.api.weniv.co.kr/${item.thumbnailImg}">
@@ -66,59 +63,61 @@
                             <strong class="price m-price">${item.price}<span>원</span></strong>
                         </div>
                     </li>
-                `;
-          productList.append(productDetailLink);
-        });
+                `
+                productList.append(productDetailLink)
+            });
 
-        const cart = document.createElement('a');
-        cart.setAttribute('class', 'link-btn cart-link');
-        mainElement.append(cart);
+            const cart = document.createElement('a')
+            cart.setAttribute('class', 'link-btn cart-link')
+            mainElement.append(cart)
 
-        // console.log(productList)
-        // console.log(mainElement)
-        root.append(mainElement);
-      });
+            // console.log(productList)
+            // console.log(mainElement)
+            root.append(mainElement)
+
+        })
     </script>
     <script>
-      // 아래 코드로 작성하면 더 좋지만, 여러분이 html이 익숙하기 때문에 innerHTML로 작성하였습니다.
-      // 묶어서 모듈화 해야 합니다!
-      // const productItem = document.createElement("li");
+        // 아래 코드로 작성하면 더 좋지만, 여러분이 html이 익숙하기 때문에 innerHTML로 작성하였습니다.
+        // 묶어서 모듈화 해야 합니다!
+        // const productItem = document.createElement("li");
 
-      // const productCard = document.createElement("a");
-      // productCard.setAttribute("href", `/detail/${item.id}`);
-      // productCard.setAttribute("class", "product-item");
+        // const productCard = document.createElement("a");
+        // productCard.setAttribute("href", `/detail/${item.id}`);
+        // productCard.setAttribute("class", "product-item");
 
-      // const productImageContainer = document.createElement("div");
-      // productImageContainer.setAttribute("class", "product-img");
+        // const productImageContainer = document.createElement("div");
+        // productImageContainer.setAttribute("class", "product-img");
 
-      // const productImage = document.createElement("img");
-      // productImage.setAttribute("src", `http://test.api.weniv.co.kr/${this.item.thumbnailImg}`);
-      // productImage.setAttribute("alt", `상품이미지`);
-      // productImageContainer.appendChild(productImage);
+        // const productImage = document.createElement("img");
+        // productImage.setAttribute("src", `http://test.api.weniv.co.kr/${this.item.thumbnailImg}`);
+        // productImage.setAttribute("alt", `상품이미지`);
+        // productImageContainer.appendChild(productImage);
 
-      // const productName = document.createElement("strong");
-      // productName.setAttribute("class", "product-name");
-      // productName.innerText = this.item.productName;
+        // const productName = document.createElement("strong");
+        // productName.setAttribute("class", "product-name");
+        // productName.innerText = this.item.productName;
 
-      // const productPriceContainer = document.createElement("div");
-      // productPriceContainer.setAttribute("class", "product-price");
+        // const productPriceContainer = document.createElement("div");
+        // productPriceContainer.setAttribute("class", "product-price");
 
-      // const productPrice = document.createElement("strong");
-      // productPrice.setAttribute("class", "price m-price");
-      // productPrice.innerText = this.item.price;
+        // const productPrice = document.createElement("strong");
+        // productPrice.setAttribute("class", "price m-price");
+        // productPrice.innerText = this.item.price;
 
-      // const priceType = document.createElement("span");
-      // priceType.innerText = "원";
+        // const priceType = document.createElement("span");
+        // priceType.innerText = "원";
 
-      // productPrice.appendChild(priceType);
+        // productPrice.appendChild(priceType);
 
-      // productPriceContainer.appendChild(productPrice);
+        // productPriceContainer.appendChild(productPrice);
 
-      // productCard.appendChild(productImageContainer);
-      // productCard.appendChild(productName);
-      // productCard.appendChild(productPriceContainer);
+        // productCard.appendChild(productImageContainer);
+        // productCard.appendChild(productName);
+        // productCard.appendChild(productPriceContainer);
 
-      // productItem.appendChild(productCard);
+        // productItem.appendChild(productCard);
     </script>
-  </body>
+</body>
+
 </html>
