--- a/react/쇼핑몰만들기/final/index_실습_4.html
+++ b/react/쇼핑몰만들기/final/index_실습_4.html
@@ -6,29 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>쇼핑몰 웹 페이지</title>
+    <link href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="src/style/style.css">
 </head>
 
 <body>
-    <!-- 
-    <div>header
-        <h1>000 웹 페이지</h1>
-        <div>menu</div>
-    </div>
-
-    <div>main
-        <h2>hello world</h2>
-        <p>hello world</p>
-    </div>
-
-    <div>
-        product
-        div{잘팔리는 옷}*20
-    </div>
-
-    <div>
-        footer
-    </div> 
-    -->
     <div id="root"></div>
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
@@ -36,6 +18,7 @@
         integrity="sha512-kp7YHLxuJDJcOzStgd6vtpxr4ZU9kjn77e6dBsivSz+pUuAuMlE2UTdKB7jjsWT84qbS8kdCWHPETnP/ctrFsA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script type="text/babel">
+
         const data = [
             {
                 "id": 1,
@@ -200,82 +183,52 @@
         ]
 
         // console.log(data)
-        // console.log(data[0])
 
-        const Header = function (props) {
-            console.log(props)
+        const Main = () => <h1 class="ir">상품페이지 목록</h1>
+
+        const Card = ({ goods }) => {
+            const url = 'http://test.api.weniv.co.kr/' + goods.thumbnailImg
             return (
-                <div>header
-                    <h1>{props.name} 쇼핑몰</h1>
-                    <p>{props.name}의 나이는 {props.age}입니다.</p>
-                    <div>menu</div>
-                </div>
+                <li class="product-item">
+                    <div class="product-img">
+                        <img src={url} />
+                    </div>
+                    <strong class="product-name sl-ellipsis">{goods.productName}</strong>
+                    <button class="like-btn"></button>
+                    <div class="product-price">
+                        <strong class="price m-price">{goods.price}<span>원</span></strong>
+                    </div>
+                </li>
             )
         }
 
-        const Main = function () {
+        const Cart = () => <a class='link-btn cart-link' href='#'></a>
+
+        const Product = ({ item }) => {
+            //이런 식으로도 가능
+            const result = []
+            item.forEach(item => {
+                result.push(<Card goods={item} key={item.id} />)
+            });
             return (
-                <div>main
-                    <h2>hello world</h2>
-                    <p>hello world</p>
-                </div>
-            )
-        }
-
-        const Card = function (props) {
-            console.log(props.goods)
-            return (
-                <div>
-                    <h3>{props.goods.productName}</h3>
-                    <p>{props.goods.price}</p>
-                </div>
-            )
-        }
-
-        const Product = function (props) {
-            // console.log(props.item)
-            return (
-                <div>
-                    product
-                    <Card goods={props.item[0]} />
-                    <Card goods={props.item[1]} />
-                    <Card goods={props.item[2]} />
-                    <Card goods={props.item[3]} />
-                    <Card goods={props.item[4]} />
-                    <Card goods={props.item[5]} />
-                    <Card goods={props.item[6]} />
-                </div>
-            )
-        }
-
-
-
-        const Footer = function () {
-            return (
-                <div>
-                    footer
-                </div>
+                <main class="product">
+                    <ul class="product-list">
+                        {result}
+                    </ul>
+                    <Cart />
+                </main>
             )
         }
 
         const body = (
             <div>
-                <p>컴포넌트화 실습</p>
-                <Header name={'weniv'} age={10} />
                 <Main />
                 <Product item={data} />
-                <Footer />
             </div>
         )
 
         const domContainer = document.querySelector('#root')
         ReactDOM.render(body, domContainer)
-        console.log(ReactDOM)
-
-        // console.dir(domContainer)
-        // console.log(domContainer)
-        // console.table(domContainer)
-        // console.error(domContainer)
     </script>
 </body>
 
